More random changes all over. (as usual)